// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> Should render correctly 1`] = `
<div>
  <footer
    class="footerstyles__Container-sc-ojjd19-0 jPsmbi"
    id="footer"
  >
    <div
      class="logostyles__OuterContainer-sc-1fentac-0 hLzBQR footerstyles__StyledLogo-sc-ojjd19-1 iDMNXa"
    >
      <a
        class="logostyles__StyledLink-sc-1fentac-1 faHbaV"
        href="/"
      >
        <span
          aria-label="Home page"
          class="logostyles__LargeText-sc-1fentac-2 cachOr"
        >
          G
        </span>
      </a>
    </div>
    <div
      class="footerstyles__StyledTechSpecs-sc-ojjd19-2 jckxzC"
    >
      <span
        class="sc-kDvujY bffeOZ tech-specsstyles__StyledParagraph-sc-1ysn53a-0 hLsLJb"
      >
        Built in
        <a
          href="https://reactjs.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="React"
            class="tech-specsstyles__Icon-sc-1ysn53a-1 ifSCys"
            height="5"
            width="5"
          />
        </a>
        and
        <a
          href="https://redux.js.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Redux"
            class="tech-specsstyles__Icon-sc-1ysn53a-1 ifSCys"
            height="5"
            width="5"
          />
        </a>
        Hosted on
        <a
          href="https://aws.amazon.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Amazon Web Services"
            class="tech-specsstyles__Icon-sc-1ysn53a-1 ifSCys"
            height="5"
            style="margin-top: .8rem; max-width: 2.9rem;"
            width="8.28"
          />
        </a>
      </span>
    </div>
    <div
      class="footer-navstyles__Wrapper-sc-7lmnsj-0 bCyRIt footerstyles__StyledFooterNav-sc-ojjd19-3"
    >
      <div
        class="footer-navstyles__Section-sc-7lmnsj-1 bcuhSW"
      >
        <a
          class="sc-gswNZR gltAA"
          href="/blog"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            Blog
          </span>
        </a>
        <a
          class="sc-gswNZR gltAA"
          href="/photography"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            Photography
          </span>
        </a>
        <a
          class="sc-gswNZR gltAA"
          href="/work"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            Work
          </span>
        </a>
        <a
          class="sc-gswNZR gltAA"
          href="/contact"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            Contact
          </span>
        </a>
      </div>
      <div
        class="footer-navstyles__Section-sc-7lmnsj-1 bcuhSW"
      >
        <a
          class="sc-gswNZR gltAA"
          href="/sitemap"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            Site map
          </span>
        </a>
        <a
          class="sc-gswNZR gltAA"
          href="/privacy-policy"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            Privacy
          </span>
        </a>
        <a
          class="sc-gswNZR gltAA"
          href="/login"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            Login/Account
          </span>
        </a>
        <a
          class="sc-gswNZR gltAA"
          href="/status"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            Status
          </span>
        </a>
      </div>
    </div>
  </footer>
</div>
`;

exports[`<Footer /> Should render correctly with custom className 1`] = `
<div>
  <footer
    class="footerstyles__Container-sc-ojjd19-0 jPsmbi test-custom-className"
    id="footer"
  >
    <div
      class="logostyles__OuterContainer-sc-1fentac-0 hLzBQR footerstyles__StyledLogo-sc-ojjd19-1 iDMNXa"
    >
      <a
        class="logostyles__StyledLink-sc-1fentac-1 faHbaV"
        href="/"
      >
        <span
          aria-label="Home page"
          class="logostyles__LargeText-sc-1fentac-2 cachOr"
        >
          G
        </span>
      </a>
    </div>
    <div
      class="footerstyles__StyledTechSpecs-sc-ojjd19-2 jckxzC"
    >
      <span
        class="sc-kDvujY bffeOZ tech-specsstyles__StyledParagraph-sc-1ysn53a-0 hLsLJb"
      >
        Built in
        <a
          href="https://reactjs.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="React"
            class="tech-specsstyles__Icon-sc-1ysn53a-1 ifSCys"
            height="5"
            width="5"
          />
        </a>
        and
        <a
          href="https://redux.js.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Redux"
            class="tech-specsstyles__Icon-sc-1ysn53a-1 ifSCys"
            height="5"
            width="5"
          />
        </a>
        Hosted on
        <a
          href="https://aws.amazon.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Amazon Web Services"
            class="tech-specsstyles__Icon-sc-1ysn53a-1 ifSCys"
            height="5"
            style="margin-top: .8rem; max-width: 2.9rem;"
            width="8.28"
          />
        </a>
      </span>
    </div>
    <div
      class="footer-navstyles__Wrapper-sc-7lmnsj-0 bCyRIt footerstyles__StyledFooterNav-sc-ojjd19-3"
    >
      <div
        class="footer-navstyles__Section-sc-7lmnsj-1 bcuhSW"
      >
        <a
          class="sc-gswNZR gltAA"
          href="/blog"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            Blog
          </span>
        </a>
        <a
          class="sc-gswNZR gltAA"
          href="/photography"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            Photography
          </span>
        </a>
        <a
          class="sc-gswNZR gltAA"
          href="/work"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            Work
          </span>
        </a>
        <a
          class="sc-gswNZR gltAA"
          href="/contact"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            Contact
          </span>
        </a>
      </div>
      <div
        class="footer-navstyles__Section-sc-7lmnsj-1 bcuhSW"
      >
        <a
          class="sc-gswNZR gltAA"
          href="/sitemap"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            Site map
          </span>
        </a>
        <a
          class="sc-gswNZR gltAA"
          href="/privacy-policy"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            Privacy
          </span>
        </a>
        <a
          class="sc-gswNZR gltAA"
          href="/login"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            Login/Account
          </span>
        </a>
        <a
          class="sc-gswNZR gltAA"
          href="/status"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            Status
          </span>
        </a>
      </div>
    </div>
  </footer>
</div>
`;
